--- a/Pratica_P002/ManipulaArray/.project
+++ b/Pratica_P002/ManipulaArray/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AtividadeAula</name>
+	<name>ManipulaArray</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1701649755122</id>
+			<id>1701649755170</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
