--- a/Calculadora/.project
+++ b/Calculadora/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Aula04 - Grupo</name>
+	<name>Calculadora</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1702396115140</id>
+			<id>1702396115145</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
