alteracao do gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Arquivos de compilação
 bin/
 target/
+/.metadata/
 
 # Arquivos de configuração
 .classpath
@@ -28,3 +29,4 @@ build/
 # Arquivos gerados pelo sistema operacional
 .DS_Store
 Thumbs.db
+
