--- a/Aviacao/src/main/resources/application.properties
+++ b/Aviacao/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:redesocial
+spring.datasource.url=jdbc:h2:mem:Aviacao
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=sa
