--- a/RedeSocial/src/main/resources/application.properties
+++ b/RedeSocial/src/main/resources/application.properties
@@ -1,13 +1,6 @@
-spring.datasource.url=jdbc:h2:mem:redesocial
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=sa
-
-# H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# JPA
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.defer-datasource-initialization=true
+#postgressql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/Residencia18
+spring.datasource.username=postgres
+spring.datasource.password=1
+spring.jpa.hibernate.ddl-auto=drop-and-create
