--- a/aula-05/product/product/src/main/resources/application.properties
+++ b/aula-05/product/product/src/main/resources/application.properties
@@ -1,1 +1,17 @@
-spring.application.name=product
+
+spring.datasource.url=jdbc:h2:mem:product
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=sa
+
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# JPA
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
+
+# Hibernate
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
