--- a/aula-05/product/product/src/main/resources/application.properties
+++ b/aula-05/product/product/src/main/resources/application.properties
@@ -14,4 +14,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
 
 # Hibernate
+spring.profiles.active=test
+
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
