--- a/aula-07/Produto/pom.xml
+++ b/aula-07/Produto/pom.xml
@@ -68,6 +68,13 @@
 		</dependency>
 		
 		<dependency>
+		    <groupId>com.github.javafaker</groupId>
+		    <artifactId>javafaker</artifactId>
+		    <version>1.0.2.Final</version>
+		</dependency>
+
+		
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.32</version>
