--- a/aula-09/Produto/pom.xml
+++ b/aula-09/Produto/pom.xml
@@ -25,6 +25,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -73,6 +79,13 @@
 			<version>1.18.32</version>
 			<scope>provided</scope>
 		</dependency>
+		 
+		<dependency>
+		    <groupId>com.github.javafaker</groupId>
+		    <artifactId>javafaker</artifactId>
+		    <version>1.0.2</version> <!-- Versão atualizada -->
+		</dependency>
+ 
 		 
 	</dependencies>
 
