--- a/aula-13/Testes/product/product/pom.xml
+++ b/aula-13/Testes/product/product/pom.xml
@@ -13,7 +13,7 @@
 	<name>course</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>17</java.version>
+		
 	</properties>
 	<dependencies>
 		<dependency>
@@ -35,6 +35,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
+			<version>2.2.224</version>
 			<scope>runtime</scope>
 		</dependency>
 		
@@ -71,6 +72,8 @@
 		    <version>1.0.2</version>
 		</dependency>
 		
+		
+          		
 		<dependency>
 		    <groupId>org.apache.logging.log4j</groupId>
 		    <artifactId>log4j-slf4j-impl</artifactId>
@@ -94,15 +97,19 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.3.0</version>
 		</dependency>
-			
+		
+		
+	
 	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<artifactId>spring-boot-maven-plugin</artifactId>			
 			</plugin>
+			
+		
 		</plugins>
 	</build>
 	<repositories>
