--- a/aula-13/Testes/product/product/bin/pom.xml
+++ b/aula-13/Testes/product/product/bin/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.5</version>
+		<version>3.0.0-M5</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.educandoweb</groupId>
@@ -44,11 +44,6 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
-		 <dependency> <!-- flyway.dependency -->
-            <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-core</artifactId>
-        </dependency>
 		
 		<dependency>
 			<groupId>org.projectlombok</groupId>
