--- a/aula-17/auth/src/main/resources/application.properties
+++ b/aula-17/auth/src/main/resources/application.properties
@@ -1,11 +1,9 @@
-spring.application.name=SpringSecurity
-
 spring.sql.init.mode=always
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/app_test_jwt
 spring.datasource.username=postgres
 spring.datasource.password=1
-
+#spring.datasource.password=JAVA!@#ResTIC18
 
 # DO NOT Store private key in the Git Repository
 jwt.publicKey=classpath:app.pub
@@ -22,6 +20,15 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 spring.jpa.show-sql=true
 
+# Hibernate ddl auto (create, create-drop, validate, update)
+# - "create-drop" the database schema will be automatically created afresh for every start of application
+#spring.jpa.hibernate.ddl-auto=update
 
 #Schema Initialization
 spring.jpa.hibernate.ddl-auto=update
+
+flyway.schemas=app-db
+flyway.user=postgres
+flyway.password=1
+flyway.url=jdbc:postgresql://localhost:5432/app_test_jwt
+flyway.locations=filesystem:db/migration
