Ex2 security config, controller, dto

--- a/aula-16/Ex2/springsecurity/springsecurity/src/main/resources/application.properties
+++ b/aula-16/Ex2/springsecurity/springsecurity/src/main/resources/application.properties
@@ -11,7 +11,8 @@ spring.datasource.password=1
 #jwt.publicKey=classpath:app.pub
 #jwt.privateKey=classpath:app.key
 #logging.level.org.springframework.security=TRACE
-
+jwt.public.key=classpath:app.pub
+jwt.private.key=classpath:app.key
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
