Ex2 security config

--- a/aula-16/Ex2/springsecurity/springsecurity/src/main/resources/application.properties
+++ b/aula-16/Ex2/springsecurity/springsecurity/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=SpringSecurity
 
 spring.sql.init.mode=always
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/mydb
+spring.datasource.url=jdbc:postgresql://localhost:5432/mydb01
 spring.datasource.username=postgres
 spring.datasource.password=1
 
