--- a/avaliacaoIndividual/SpringSecurity/pom.xml
+++ b/avaliacaoIndividual/SpringSecurity/pom.xml
@@ -109,6 +109,10 @@
             <scope>test</scope>
         </dependency>
         
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 		
 	
 	
