--- a/avaliacaoIndividual/SpringSecurity/src/main/resources/application.properties
+++ b/avaliacaoIndividual/SpringSecurity/src/main/resources/application.properties
@@ -26,6 +26,14 @@ spring.jpa.show-sql=true
 #Schema Initialization
 spring.jpa.hibernate.ddl-auto=update
 
+#email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=anninhagoncalves15@gmail.com
+spring.mail.password=ixtb mjyw mvhq wrku
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 #flyway.schemas=app-db
 #flyway.user=postgres
 #flyway.password=JAVA!@#ResTIC18
